# error_aware

./: CMakeLists.txt
include/ea/: compiler_attributes.hpp  concepts.hpp  config.hpp  meta.hpp  policies.hpp  ranges.hpp  sum.hpp
include/ea/detail/sum/: dispatch.hpp  kahan_impl.hpp  naive_impl.hpp  neumaier_impl.hpp  pairwise_impl.hpp
